[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.12",
]
build-backend = "scikit_build_core.build"

[project]
name            = "mars"
version         = "0.7"
description     = "Multivariate Adaptive Regression Splines"
readme          = "README.md"
authors         = [{ name = "Arnaldo Leon", email = "amleon@alum.mit.edu" }]
requires-python = ">=3.10"
license         = "MIT"

[project.urls]
Source = "https://github.com/aleon1138/mars"

[tool.scikit-build]
minimum-version = "0.10"
cmake.version   = ">=3.18"
build.verbose   = true
wheel.packages  = []   # no packages — mars.py and marslib are installed via CMake
